<resources>

    <!-- Authentication Screens -->
    <string name="auth_toolbar_title">%1$s</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_msg">Welcome to</string>
    <string name="something_wrong">Something went wrong!!</string>
    <string name="auth_option">AuthOption</string>
    <string name="fill_data">Fill your Data</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="or_label">OR</string>
    <string name="forget_password">Forget your password?</string>
    <string name="user_data">User Data</string>
    <string name="user_info">User Info</string>
    <string name="user_goal">User Goal</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="height_cm">Height/cm</string>
    <string name="weight_km">Weight/km</string>
    <string name="desired_weight_km">Desired Weight/km</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="fitness_tracker">Fitness Tracker</string>
    <string name="patient_treatment">Patient Treatment</string>
    <string name="future_goal">Future Goal</string>
    <string name="error_title">Error</string>
    <string name="error_message">Please Fill The empty cell</string>
    <string name="error_confirm_message">Confirmation Password must be same as password</string>
    <string name="error_gender_message">Please Select your Gender</string>
    <string name="error_weight_message">Please Enter Your Desired Weight</string>
    <string name="error_future_goal_message">Please Select your Future Goal</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_message">We Will Send email to you to reset your password</string>
    <string name="send">Send</string>
    <string name="confirmation_reset_msg">Email Sent Successfully</string>
    <string name="confirmation_logged_msg">You Logged In Successfully</string>
    <string name="confirmation_register_msg">You Registered Successfully</string>
    <string name="already_has_account">Already Has Account, Please Login</string>
    <string name="failed_to_login">Wrong User Name or Password</string>
    <string name="failed_reset_msg">Wrong Email!</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <!-- Navigation Labels -->
    <string name="app_name">Careium</string>
    <string name="app_full_name">Careium AI</string>
    <string name="app_name_first_part">Care</string>
    <string name="app_name_second_part">ium</string>
    <string name="home">Home</string>
    <string name="diary">Diary</string>
    <string name="recipes">Recipes</string>
    <string name="diet_calender">Diet Calender</string>
    <string name="reminder">Reminder</string>
    <string name="photo_album">Photo Album</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="verified">Verified</string>
    <string name="username">Mark Elliot Zuckerberg</string>

    <!-- Home Fragment -->
    <string name="calories_remaining">Calories Remaining</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="cal_val">/%1$d cal</string>
    <string name="gram_val">/%1$.2f g</string>
    <string name="last_tracked_image">Last Tracked Image</string>

    <!--  Profile Fragment  -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="user_name_profile">%1$s</string>
    <string name="age">Age</string>
    <string name="age_val">%1$d</string>
    <string name="height">Height</string>
    <string name="height_val">%1$.1f Cm</string>
    <string name="weight">Weight</string>
    <string name="weight_val">%1$.1f Kg</string>
    <string name="type">Type</string>
    <string name="type_val">%1$s</string>
    <string name="gender">Gender</string>
    <string name="gender_val">%1$s</string>
    <string name="desired_weight">Desired Weight</string>
    <string name="desired_weight_val">%1$.1f Kg</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date">%1$s</string>

    <!-- Reports Fragment -->
    <string name="total_nutrition_title">Total Nutrition per gram during this week</string>
    <string name="report_title">Week Report info</string>
    <string name="report_gain_weight_title">- The Gain Weight Quantity:</string>
    <string name="report_lose_weight_title">- The Lost Weight Quantity:</string>

    <string name="report_positive_gained_weight">- This week you gained weight and this is very great to your target</string>
    <string name="report_negative_gained_weight">- This week you gained weight and this is the opposite to your target</string>
    <string name="report_positive_lose_weight">- This week you lost weight and this is very great to your target</string>
    <string name="report_negative_lose_weight">- This week you lost weight and this is the opposite to your target</string>
    <string name="report_careful_message">- BE CAREFUL, with your meals in the coming weeks</string>
    <string name="report_keep_message">- WELL DONE, keep going with the same range in following your diet</string>
    <string name="no_meals_in_database">You does not have any food meal till now</string>
    <string name="no_meals_in_database_week">You does not have any food meal this week</string>
    <string name="wait">Please Wait…</string>

    <!-- Locals -->
    <string name="local_eg">EG</string>
    <string name="dish_image">Dish Image</string>

    <!-- Notes -->
    <string name="add_new_note">Add New Note</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="save_note">Save Note</string>
    <string name="title_Diary">Diary</string>

    <!--Reminder fragment -->
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="breakfast">Breakfast</string>
    <string name="time">00:00</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>

    <string name="food_name">Food Name:</string>
    <string name="food_calories">Food Calories:</string>
    <string name="food_recommendations">Food Recommendations:</string>
    <string name="breakfast_image">breakfast image</string>
    <string name="lunch_image">lunch image</string>
    <string name="dinner_image">dinner image</string>
    <string name="snack_image">snack image</string>

</resources>