<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_dark"
    android:padding="20dp"
    tools:context=".frontend.home.fragments.AddNote_Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TitleNotes"
        android:text="@string/add_new_note"
        android:textColor="@color/orange_700"
        android:textAlignment="center"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/theme_rounded_white_background"
        android:layout_margin="10dp"
        >

        <EditText
            android:id="@+id/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/title_text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:autofillHints=""
            android:inputType="text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/DescriptionText"
            android:hint="@string/description_text"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:lines="10"
            android:gravity="top"
            android:autofillHints=""
            android:inputType="textMultiLine" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SaveNote_Btn"
        android:text="@string/save_note"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/medium_text_size"
        android:layout_gravity="center"
        android:textColor="@color/orange_700" />


</LinearLayout>