<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    android:theme="@style/Theme.auth"
    tools:context=".frontend.authentication.activities.SplashActivity">

    <RelativeLayout
        android:id="@+id/welcome_container"
        android:layout_width="@dimen/x_large_size"
        android:layout_height="@dimen/large_size"
        android:layout_marginStart="@dimen/negative_spacing"
        android:layout_marginTop="@dimen/negative_spacing"
        android:background="@drawable/transparent_back_oval"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_large_spacing"
            android:layout_marginTop="@dimen/x_large_spacing"
            android:fontFamily="@font/comicz"
            android:text="@string/welcome_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/app_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_label"
            android:layout_marginStart="@dimen/x_large_spacing"
            android:fontFamily="@font/comicz"
            android:text="@string/app_full_name"
            android:textColor="@color/white"
            android:textSize="@dimen/semi_large_text_size"
            android:textStyle="italic" />

    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/large_size"
        android:layout_height="wrap_content"
        android:layout_above="@id/register_btn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/auth_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="@dimen/large_size"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/action_button_margin"
        android:layout_marginBottom="@dimen/xx_large_spacing"
        android:background="@drawable/auth_button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size" />

</RelativeLayout>