<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_info_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.authentication.fragments.UserInfoFragment">

    <RelativeLayout
        android:id="@+id/fragment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/large_spacing"
        android:layout_marginTop="@dimen/xx_large_spacing"
        android:layout_marginBottom="@dimen/x_large_spacing"
        android:background="@drawable/items_container"
        tools:ignore="UselessParent">

        <ProgressBar
            android:id="@+id/phase2_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_plus_spacing"
            android:max="90"
            android:progress="60" />

        <TextView
            android:id="@+id/user_info_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phase2_progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/medium_spacing"
            android:text="@string/user_info"
            android:textColor="@color/light_black"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="italic" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/info_height_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_info_label"
            android:layout_marginHorizontal="@dimen/medium_plus_spacing"
            android:layout_marginTop="@dimen/medium_plus_spacing"
            android:background="@drawable/theme_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/info_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/height_cm"
                android:inputType="numberDecimal"
                android:paddingStart="@dimen/medium_spacing"
                android:paddingEnd="@dimen/small_spacing"
                android:paddingBottom="@dimen/tiny_spacing"
                android:textColor="@color/light_black"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/info_weight_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_height_layout"
            android:layout_marginHorizontal="@dimen/medium_plus_spacing"
            android:layout_marginTop="@dimen/medium_plus_spacing"
            android:background="@drawable/theme_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/info_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/weight_km"
                android:inputType="numberDecimal"
                android:paddingStart="@dimen/medium_spacing"
                android:paddingEnd="@dimen/small_spacing"
                android:paddingBottom="@dimen/tiny_spacing"
                android:textColor="@color/light_black"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/info_age_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_weight_layout"
            android:layout_marginHorizontal="@dimen/medium_plus_spacing"
            android:layout_marginTop="@dimen/medium_plus_spacing"
            android:background="@drawable/theme_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/info_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingStart="@dimen/medium_spacing"
                android:paddingEnd="@dimen/small_spacing"
                android:paddingBottom="@dimen/tiny_spacing"
                android:textColor="@color/light_black"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/info_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_age_layout"
            android:layout_marginHorizontal="@dimen/medium_plus_spacing"
            android:layout_marginTop="@dimen/medium_plus_spacing"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="@dimen/small_plus_text_size" />

        <RadioGroup
            android:id="@+id/info_gender_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_gender_label"
            android:layout_marginHorizontal="@dimen/medium_plus_spacing"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/info_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/light_black" />


            <RadioButton
                android:id="@+id/info_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/light_black" />

        </RadioGroup>


        <include
            android:id="@+id/info_transition"
            layout="@layout/layout_transition_custom_buttons" />

        <include
            android:id="@+id/info_error_view"
            layout="@layout/layout_error_custom_view" />

    </RelativeLayout>


</FrameLayout>