<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.authentication.fragments.LoginFragment">

    <RelativeLayout
        android:id="@+id/fragment_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/large_spacing"
        android:layout_marginTop="@dimen/xx_large_spacing"
        android:layout_marginBottom="@dimen/x_large_spacing"
        android:background="@drawable/items_container"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/large_spacing"
            android:text="@string/fill_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_label"
            android:layout_marginHorizontal="@dimen/medium_plus_spacing"
            android:layout_marginTop="@dimen/x_large_spacing"
            android:background="@drawable/theme_button">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/medium_spacing"
                android:paddingEnd="@dimen/small_spacing"
                android:paddingBottom="@dimen/tiny_spacing"
                android:textColor="@color/light_black"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email_layout"
            android:layout_marginHorizontal="@dimen/medium_plus_spacing"
            android:layout_marginTop="@dimen/medium_plus_spacing"
            android:background="@drawable/theme_button"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/medium_spacing"
                android:paddingEnd="@dimen/small_spacing"
                android:paddingBottom="@dimen/tiny_spacing"
                android:textColor="@color/light_black"
                android:textSize="@dimen/medium_text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_layout"
            android:layout_marginStart="@dimen/medium_plus_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:fontFamily="@font/lato_black"
            android:text="@string/forget_password"
            android:textColor="@color/light_black"
            android:textSize="@dimen/small_plus_text_size"
            android:textStyle="italic" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/medium_size"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/xx_large_spacing"
            android:background="@drawable/theme_highlight"
            android:padding="@dimen/small_spacing"
            android:text="@string/login_now"
            android:textColor="@color/white"
            android:textSize="@dimen/small_plus_text_size" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/medium_spacing"
            android:visibility="gone" />

    </RelativeLayout>

    <include
        android:id="@+id/login_error_view"
        layout="@layout/layout_error_custom_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/large_spacing"
        android:layout_marginTop="@dimen/xx_large_spacing"
        android:layout_marginBottom="@dimen/x_large_spacing" />

</FrameLayout>